[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-example"
version = "0.1.0"
description = "FastAPI example to be used for testing"
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["fastapi>=0.116.1", "hypercorn>=0.17.3", "uvicorn>=0.35.0"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \..*  # hidden directories and files like .git, .venv
    | build
    | dist
    | __pycache__
)/
'''

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.8"
reportMissingImports = true
reportMissingTypeStubs = false
